Operators file added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Introducing Javascript</h1>
 
     <script src="main.js; function.js; array.js; homeWork.js; object.js;
-    variableData.js; HW2.js"></script>
+    variableData.js; HW2.js; operator.js"></script>
   </body>
 </html>
