Operators 2nd and exercise file added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <h1>Introducing Javascript</h1>
 
-    <script src="main.js; function.js; array.js; homeWork.js; object.js;
-    variableData.js; HW2.js; operator.js"></script>
+    <script
+      src="main.js; function.js; array.js; homeWork.js; object.js;
+    variableData.js; HW2.js; operator.js"
+      ;
+      logicalOperP2.js;
+      exercise_operator.js
+    ></script>
   </body>
 </html>
