conditional.js and conditional_exercise.js added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     variableData.js; HW2.js; operator.js"
       ;
       logicalOperP2.js;
-      exercise_operator.js
+      exercise_operator.js;
+      condition.js;
+      conditional_exercise.js;
     ></script>
   </body>
 </html>
