loop,loopExercise,nestedLoop,propertise&method files added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       exercise_operator.js;
       condition.js;
       conditional_exercise.js;
+      loop.js;
+      nestedLoops.js;
+      loop_exercise.js;
+      propertise&method.js;
     ></script>
   </body>
 </html>
