builtInprop&Method.js file added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       nestedLoops.js;
       loop_exercise.js;
       propertise&method.js;
+      builtInProp&Method.js;
     ></script>
   </body>
 </html>
