objectMethod.js file added

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       loop_exercise.js;
       propertise&method.js;
       builtInProp&Method.js;
+      objectMethod.js;
     ></script>
   </body>
 </html>
