object deep drive 1st part  added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       propertise&method.js;
       builtInProp&Method.js;
       objectMethod.js;
+      objectDeepdrive.js
     ></script>
   </body>
 </html>
